[tool.poetry]
name = "ros2-learn"
version = "0.1.0"
description = "A collection of tutorials and examples for learning ROS2"
authors = ["FallenDeity <61227305+FallenDeity@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
mypy = "^1.8.0"
isort = "^5.13.2"
pre-commit = "^3.6.0"
ruff = "^0.1.11"
mkdocs-material = {extras = ["imaging"], version = "^9.5.3"}
mkdocs-glightbox = "^0.3.6"
mkdocstrings = {extras = ["python"], version = ">=0.19,<0.25"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.black]
line-length = 120
target-version = ['py310']

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
exclude = ["build", "install", "docs", "test"]
